@@ -1,6 +1,6 @@
 {
   "name": "simp-fips",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "author": "SIMP Team",
   "summary": "A SIMP module for managing FIPS",
   "license": "Apache-2.0",
@@ -19,10 +19,6 @@
     {
       "name": "puppetlabs/stdlib",
       "version_requirement": ">= 6.6.0 < 8.0.0"
-    },
-    {
-      "name": "herculesteam/augeasproviders_core",
-      "version_requirement": ">= 2.1.1 < 3.0.0"
     },
     {
       "name": "herculesteam/augeasproviders_grub",
